# pyUCell

./: pyproject.toml
src/pyUCell/: __init__.py  ucell.py  ucell_inlined.py
src/pyucell/: __init__.py  ucell.py
